src/content/docs/sdk/flutter/v5/features/att-ja.mdx
---
title: App Tracking Transparencyの設定
description: AppleのApp Tracking Transparencyフレームワークを使用するようにアプリを設定する
slug: ja/sdk/flutter/features/att
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v4: /ja/sdk/flutter/v4/features/att
---

広告識別子（IDFA）を記録したい場合は、ユーザーの許諾を得るためのプロンプトを表示する必要があります。これを行うには、アプリにAppleのApp Tracking Transparency（ATT）frameworkを組み込む必要があります。Adjust SDKはユーザーの許諾状況を保存し、リクエストごとにAdjustサーバーに送信します。

## 承認ステータス {#authorization-statuses}

<Table>

| ステータス（Status）                                | コード | 説明                                                             |
| --------------------------------------------------- | ------ | ---------------------------------------------------------------- |
| `ATTrackingManagerAuthorizationStatusNotDetermined` | `0`    | ユーザーがアクセスプロンプトに応答していない                     |
| `ATTrackingManagerAuthorizationStatusRestricted`    | `1`    | アプリ関連データへのアクセスがデバイスレベルでブロックされている |
| `ATTrackingManagerAuthorizationStatusDenied`        | `2`    | ユーザーがデバイス計測によるアプリ関連データへのアクセスを拒否   |
| `ATTrackingManagerAuthorizationStatusAuthorized`    | `3`    | ユーザーがデバイス計測によるアプリ関連データへのアクセスを承認   |

</Table>
<Callout type="note">

SDKがATTステータスを取得できない場合、`-1`のステータスコードを受け取る可能性があります。

</Callout>

## ATT承認ラッパー {#att-authorization-wrapper}

<CodeBlock title="メソッドシグネチャー">

```dart
static Future<num> requestAppTrackingAuthorization() async
```

</CodeBlock>

Adjust SDKには、[Appleの`requestTrackingAuthorizationWithCompletionHandler`メソッドのラッパーが含まれています](https://developer.apple.com/documentation/apptrackingtransparency/attrackingmanager/3547037-requesttrackingauthorizationwith)。ATTプロンプトをカスタマイズしない場合は、このラッパーを使用することができます。

コールバックメソッドは、ユーザーが同意ダイアログに応答した時にトリガーされ、ユーザーの同意ステータスコードをAdjustサーバーに送信します。コールバック関数内で各ステータスコードに対するレスポンスを定義することができます。

ATTリクエストダイアログのテキスト内容を指定する必要があります。これを行うには、`Info.plist`ファイルで`NSUserTrackingUsageDescription`キーにテキストを追加してください。

<Callout type="tip">

Adjust SDKは、カスタムプロンプトを使用した場合、同意ステータスも記録します。初期化前にプロンプトを表示した場合、SDKはインストールイベントと共にステータスを送信します。プロンプトを初期化後に表示した場合は、SDKはユーザーが更新した後に、即時にAdjustサーバーにステータスを送信します。

</Callout>

```dart
if (Platform.isIOS) {
   Adjust.requestAppTrackingAuthorization().then((status) {
      switch (status) {
         case 0:
            // ATTrackingManagerAuthorizationStatusNotDetermined case
            break;
         case 1:
            // ATTrackingManagerAuthorizationStatusRestricted case
            break;
         case 2:
            // ATTrackingManagerAuthorizationStatusDenied case
            break;
         case 3:
            // ATTrackingManagerAuthorizationStatusAuthorized case
            break;
      }
   });
}
```

### 例 {#example}

この例では、ユーザーがプロンプトと対話したときに、ユーザーの認証状態について人間が読み取れる説明をログに記録する方法を示しています。

<CodeBlock title="main.dart">

```dart
import 'package:adjust_sdk/adjust.dart';
import 'package:flutter/cupertino.dart';
import 'package:flutter/material.dart';
import 'package:flutter/services.dart';

initPlatformState() async {
   AdjustConfig config =
      new AdjustConfig('{YourAppToken}', AdjustEnvironment.sandbox);
   config.logLevel = AdjustLogLevel.verbose;

   Adjust.initSdk(config);

   Adjust.requestAppTrackingAuthorization().then((status) {
      print('[Adjust]: Authorization status update!');
      switch (status) {
         case 0:
            print(
               '[Adjust]: Authorization status update: ATTrackingManagerAuthorizationStatusNotDetermined');
            break;
         case 1:
            print(
               '[Adjust]: Authorization status update: ATTrackingManagerAuthorizationStatusRestricted');
            break;
         case 2:
            print(
               '[Adjust]: Authorization status update: ATTrackingManagerAuthorizationStatusDenied');
            break;
         case 3:
            print(
               '[Adjust]: Authorization status update: ATTrackingManagerAuthorizationStatusAuthorized');
            break;
      }
   });
}

```

</CodeBlock>

## 現在の承認ステータスを取得 {#get-current-authorization-status}

<CodeBlock title="メソッドシグネチャー">

```dart
static Future<int> getAppTrackingAuthorizationStatus() async
```

</CodeBlock>

ユーザーの現在の認証ステータスはいつでも取得することができます。`getAppTrackingAuthorizationStatus`メソッドを呼び出し、 **整数** で認証ステータスコードを返してください。

```dart
Adjust.getAppTrackingAuthorizationStatus().then((status) {
  // status gives you information about ATT consent value
});
```

### 例 {#example-1}

この例では、ユーザーの認証ステータスを収集し、`String`に変換する方法を示しています。この情報は`authorizationStatus`という変数に割り当てられ、`"status"`というキーでセッション パートナー パラメーターとしてパスされます。

```dart
String authorizationStatus = Convert.ToString(Adjust.getAppTrackingAuthorizationStatus());
Adjust.addSessionPartnerParameter("status", authorizationStatus);
```

## 承認ステータスの変更を確認する {#check-for-authorization-status-changes}

<CodeBlock title="メソッドシグネチャー">

```dart
static void checkForNewAttStatus()
```

</CodeBlock>

カスタムATTプロンプトを使用する場合、ユーザーの認証ステータスに変更があった場合、Adjust SDKに通知する必要があります。`checkForNewAttStatus`メソッドを呼び出し、Adjustサーバーに認証ステータスを送信してください。

```dart
Adjust.checkForNewAttStatus();
```

## プロンプトのタイミングをカスタム設定 {#custom-prompt-timing}

<CodeBlock title="プロパティ宣言">

```dart
num? attConsentWaitingInterval;
```

</CodeBlock>

アプリにオンボーディングプロセスまたはチュートリアルが含まれる場合、ユーザーがこのプロセスを完了するまで、ユーザーのATT同意ステータスの送信を遅らせたい場合があります。これを行うには、`attConsentWaitingInterval`プロパティを設定して、データの送信を **最大360秒** 遅延させ、ユーザーに最初のオンボーディングを完了する時間を与えることができます。タイムアウトが終了した後、またはユーザーが同意ステータスを設定した後に、SDKはユーザーの同意ステータスと共に遅延中に記録した全ての情報をAdjustのサーバーに送信します。

<Callout type="note">

タイムアウトが終了する前、または同意ステータスを選択する前にユーザーがアプリを閉じた場合、アプリを再度開いたときにタイムアウトが再開されます。

</Callout>

```dart
AdjustConfig adjustConfig = new AdjustConfig('{YourAppToken}', AdjustEnvironment.sandbox);
//...
adjustConfig.attConsentWaitingInterval = 30;
//...
Adjust.initSdk(adjustConfig);
```
